--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,20 +1,113 @@
 * {
   box-sizing: border-box;
 }
-
+p {
+  margin: 0px;
+  padding: 0px;
+}
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
+    'Open Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #fafafa;
   color: #212121;
   line-height: 1.5;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.search-form {
+  display: flex;
+  justify-content: center;
+  padding: 10px;
+}
+.search-form button {
+  padding: 10px;
+  border-radius: 50;
+  cursor: pointer;
+  background-color: transparent;
+}
+.search-form button:hover {
+  background-color: skyblue;
+}
+@media screen and (min-width: 320px) {
+  .gallery {
+    min-width: 300px;
+    padding-left: 10px;
+    padding-right: 10px;
+    width: 100%;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .photo-card {
+    flex-basis: 100%;
+    margin-top: 50px;
+  }
 }
 
-#search-box {
-  font: inherit;
-  padding: 8px;
-  max-width: 320px;
-  margin-bottom: 16px;
+@media screen and (min-width: 768px) {
+  .gallery {
+    min-width: 748px;
+    padding-left: 10px;
+    padding-right: 10px;
+    margin-top: -10px;
+    margin-left: -10px;
+    justify-content: center;
+  }
+  .photo-card {
+    flex-basis: calc((100% - 30px) / 3);
+    margin-left: 10px;
+    margin-top: 10px;
+    box-shadow: 20px 20px 80px rgba(0, 0, 0, 0.1);
+  }
+  .info {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 2px;
+    margin: 0 auto;
+    font-size: 14px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .gallery {
+    min-width: 1180px;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  .photo-card {
+    flex-basis: calc((100% - 40px) / 4);
+  }
+  .info {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+    margin: 0 auto;
+    font-size: 14px;
+  }
+}
+img {
+  width: 100%;
+  height: 80%;
+  display: block;
+}
+
+.load-more {
+  display: none;
+  border-radius: 50px;
+  background-color: transparent;
+  padding: 16px;
+  margin: 10px;
+}
+.load-more.is-show {
+  display: inline-block;
+}
+
+.load-more:hover {
+  background-color: skyblue;
+  cursor: pointer;
 }
