--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -21,10 +21,11 @@ body {
   display: flex;
   justify-content: center;
   padding: 10px;
+  border-radius: 4px;
 }
 .search-form button {
   padding: 10px;
-  border-radius: 50;
+  border-radius: 4px;
   cursor: pointer;
   background-color: transparent;
 }
@@ -110,4 +111,23 @@ img {
 .load-more:hover {
   background-color: skyblue;
   cursor: pointer;
+}
+.load-more-video {
+  display: none;
+  border-radius: 50px;
+  background-color: transparent;
+  padding: 16px;
+  margin: 10px;
+}
+.load-more-video.is-show {
+  display: inline-block;
+}
+
+.load-more-video:hover {
+  background-color: skyblue;
+  cursor: pointer;
+}
+.player {
+  width: 100%;
+  height: 100%;
 }
